--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A project created by the Sinto command",
   "scripts": {
     "start": "browser-sync start --config bs-config.json",
-    "build": "gulp"
+    "build": "gulp",
+    "test": "mocha"
   },
   "dependencies": {
     "bootstrap": "^5.3.3"
@@ -15,7 +16,8 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-minify": "^3.1.0",
-    "gulp-replace": "^1.1.4"
+    "gulp-replace": "^1.1.4",
+    "mocha": "^11.0.1"
   },
   "type": "module"
 }
